# DBIS_Project

./: .gitignore  COST_ESTIMATION_IMPROVEMENTS.md  README.md  hlog.md  make_diff.bash  notes.md  report.tex  requirement.txt  results.txt  work.md
Checkpoint1/: overview.md
data/: README.md  generate.py  test.py
modified_parquet_fdw/src/: parquet_impl.cpp
old_parquet_gsi_fdw/: Makefile  README.md  api_documentation.md  parquet_gsi_fdw.c
parquet_extraction_engine/: CMakeLists.txt  main.cpp  setup.md
parquet_fdw/: Makefile
parquet_fdw/src/: common.bc  common.cpp  exec_state.bc  parquet_fdw.bc  parquet_impl.cpp  reader.bc
parquet_gsi_fdw/: parquet_gsi_fdw--1.0.sql  parquet_gsi_fdw.bc  parquet_gsi_fdw.c  parquet_gsi_fdw.control
parquet_gsi_fdw/sql/: datalake_table.sql  hverify.sql  quickstart.sql
submission/: results.txt
submission/diff_files/src/: parquet_impl.cpp.diff
submission/new_files/data/: README.md  functions_exaplaination.md  generate.py
submission/new_files/watcher/: watcher_setup.md
submission/test/: README.md  drop.sql  drop_without_registry.sql  starter.sql
test/: drop.sql  starter.sql
tester/: validate.py
watcher/: .env  extractor.py  watcher_deamon.py
